--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Device configuration for the International Samsung Galaxy S6 (G920F variant)
+Device configuration for the T-Mobile Samsung Galaxy S6 Edge (G925T variant)
 
 Copyright (C) 2016 Brandon McAnsh <brandon.mcansh@gmail.com>
 
